--- a/la/cheatsheet.tex
+++ b/la/cheatsheet.tex
@@ -28,7 +28,7 @@
 \end{center}
 
 \input{content/matrixBasics.tex}
-\input{content/gaussElimination.tex}
+\input{content/gaussAlgorithm.tex}
 
 \vfill
 
