--- a/thin/cheatsheet.tex
+++ b/thin/cheatsheet.tex
@@ -14,10 +14,6 @@
 ]{hyperref}
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{enumitem}
-\usepackage{tikz}
-\usepackage{pgfplots}
-\usepgfplotslibrary{fillbetween}
-\usepackage{polynom}
 
 \begin{document}
 \input{content/def.tex}
@@ -28,6 +24,7 @@
 \end{center}
 
 \input{content/alphabetWordsLanguage.tex}
+\input{content/regularExpressions.tex}
 
 \vfill
 
