--- a/thin/content/alphabetWordsLanguage.tex
+++ b/thin/content/alphabetWordsLanguage.tex
@@ -26,7 +26,7 @@ Mit \(w^R\) wird das Spiegelwort von \(w\) bezeichnet, also die Umkehrung der Sy
 \]
 Wenn \(w=w^R\) gilt, dann ist \(w\) ein Palindrom.
 
-\subsubsection{Wörter der Länge \(k\)}
+\subsubsection{\texorpdfstring{Wörter der Länge \(k\)}{Wörter der Länge k}}
 Die Menge aller Wörter der Länge \(k\) über einem Alphabet \(\Sigma\) wird mit \(\Sigma^k\) bezeichnet:
 \[
     \Sigma^k = \{ w \in \Sigma^* \mid |w| = k \}
